# Lampara_Inteligente

./: README.md
circuitos/: Proyecto carla.kicad_pcb  Proyecto carla.kicad_prl  Proyecto carla.kicad_pro  Proyecto carla.kicad_sch  fp-5B9.tmp  fp-info-cache
codigo/: CMakeLists.txt  lampara_inteligente.c
codigo/libs/inc/: lcd_i2c.h
